--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3703,6 +3703,8 @@ input, select, textarea {
 			#nav ul.links li {
 				display: block;
 				padding-left: 0;
+				opacity: 0.7; /* Slightly transparent */
+				transition: opacity 0.3s ease-in-out; /* Smooth transition */
 			}
 
 				#nav ul.links li a {
@@ -3723,6 +3725,7 @@ input, select, textarea {
 
 				#nav ul.links li.active {
 					background-color: #ffffff;
+					opacity: 1; /* Fully opaque for active tabs */
 				}
 
 					#nav ul.links li.active a {
