--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4687,3 +4687,20 @@ input, select, textarea {
 		}
 
 	}
+
+	.skills-icons {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 15px;
+		margin-top: 10px;
+		justify-content: center;
+	  }
+	  
+	  .skills-icons svg {
+		transition: transform 0.3s ease;
+		cursor: pointer; /* Optional */
+	  }
+	  
+	  .skills-icons svg:hover {
+		transform: scale(1.1);
+	  }	  
