--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4688,19 +4688,17 @@ input, select, textarea {
 
 	}
 
-	.skills-icons {
+	/* .skills-icons {
 		display: flex;
-		flex-wrap: wrap;
-		gap: 15px;
-		margin-top: 10px;
-		justify-content: center;
+		align-items: center;
+		gap: 8px;
 	  }
 	  
 	  .skills-icons svg {
 		transition: transform 0.3s ease;
-		cursor: pointer; /* Optional */
+		cursor: pointer;
 	  }
 	  
 	  .skills-icons svg:hover {
 		transform: scale(1.1);
-	  }	  
+	  }	   */
